# SpacerScope

./: CMakeLists.txt  LICENSE  README.md  build-macos.yml  spacerscope用户手册中文版.md
.github/workflows/: build-macos.yml
benchmarks/: fake_genome.fasta  faker_database_spacerscope_out.tsv  query.fasta  readme.txt  test_code.txt
cli/: README.md  main.cpp  postprocess.cpp  postprocess.hpp  progress.cpp  progress.hpp  report_html.cpp  report_html.hpp  report_logo.hpp
core/: anno_parser.cpp  anno_parser.hpp  count_filter.cpp  count_filter.hpp  dust_filter.cpp  dust_filter.hpp  fasta_parser.cpp  fasta_parser.hpp  indel_search.cpp  indel_search.hpp  mismatch_search.cpp  mismatch_search.hpp  on_target_filter.cpp  on_target_filter.hpp  spacer_extraction.cpp  spacer_extraction.hpp  types.hpp  utils.cpp  utils.hpp
resources/: spacerscope-web.rc  spacerscope.rc
web/: README.md  web_assets.hpp  web_icon_base64.hpp  web_job.cpp  web_job.hpp  web_main.cpp
web/image/web_main/: 1773303064115.txt
